--- a/flows/docker_image/build.yml
+++ b/flows/docker_image/build.yml
@@ -1,17 +1,52 @@
-id: build-docker-image
+id: build-docker-images
 namespace: company.team
 
 tasks:
-  - id: build
-    type: io.kestra.plugin.docker.Build
+  - id: build-backend
+    type: io.kestra.plugin.docker.build
     dockerfile: |
-      FROM python:3.10
+      FROM python:3
+
       RUN pip install --upgrade pip
-      RUN pip install --no-cache-dir kestra requests "polars[all]"
+
+      COPY ../../backend/requirements.txt .
+      RUN pip install -r requirements.txt
+
+      COPY ../../backend /app
+
+      WORKDIR /app
+
+      COPY ../../backend/entrypoint.sh /
+      ENTRYPOINT ["sh", "/entrypoint.sh"]
     tags:
-      - kestra/polars:latest
+      - xonoxc/cygree_backend:latest
     push: true
     credentials:
       registry: https://index.docker.io/v1/
-      username: "{{ secret('DOCKERHUB_USERNAME') }}"
-      password: "{{ secret('DOCKERHUB_PASSWORD') }}"
+      username: "{{ secret('dockerhub_username') }}"
+      password: "{{ secret('dockerhub_password') }}"
+
+  - id: build-frontend
+    type: io.kestra.plugin.docker.build
+    dockerfile: |
+      FROM node:16-alpine
+
+      RUN curl -fsSL https://bun.sh/install | bash
+
+      ENV PATH="/root/.bun/bin:$PATH"
+
+      COPY ../../frontend/package.json ../../frontend/bun.lockb /app/
+      WORKDIR /app
+      RUN bun install
+
+      COPY ../../frontend /app
+      RUN bun build
+
+      CMD ["bun", "start"]
+    tags:
+      - xonoxc/cygree_frontend:latest
+    push: true
+    credentials:
+      registry: https://index.docker.io/v1/
+      username: "{{ secret('dockerhub_username') }}"
+      password: "{{ secret('dockerhub_password') }}"
